Refactor link-info structure and add contact link
Refactor link-info structure for better readability and added a contact link.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         .link-item {
             text-decoration: none; color: white; display: flex; align-items: center;
             background: rgba(255, 255, 255, 0.1); border: 1px solid rgba(255, 255, 255, 0.15);
-            border-radius: 16px; overflow: hidden; height: 75px; backdrop-filter: blur(15px); -webkit-backdrop-filter: blur(15px);
+            border-radius: 16px; overflow: hidden; height: 75px;
+            backdrop-filter: blur(15px); -webkit-backdrop-filter: blur(15px);
         }
         .link-thumb { 
             width: 75px; height: 75px; background: rgba(255,255,255,0.05); 
@@ -56,19 +57,38 @@
         <div class="links">
             <a href="https://youtu.be/G0Z21ulPaLQ" target="_blank" class="link-item">
                 <div class="link-thumb">🍀</div>
-                <div class="link-info"><div class="link-title">REALSTREET</div><div class="link-meta">YouTube</div></div>
+                <div class="link-info">
+                    <div class="link-title">REALSTREET</div>
+                    <div class="link-meta">YouTube</div>
+                </div>
                 <div class="link-arrow">→</div>
             </a>
 
             <a href="https://youtu.be/H8EEQmdbwgc" target="_blank" class="link-item">
                 <div class="link-thumb">🍀</div>
-                <div class="link-info"><div class="link-title">化粧 / freestyle</div><div class="link-meta">YouTube</div></div>
+                <div class="link-info">
+                    <div class="link-title">化粧 / freestyle</div>
+                    <div class="link-meta">YouTube</div>
+                </div>
                 <div class="link-arrow">→</div>
             </a>
 
             <a href="https://www.instagram.com/polaris11999/" target="_blank" class="link-item">
                 <div class="link-thumb" style="background: linear-gradient(45deg, #f09433, #bc1888);">🎞️</div>
-                <div class="link-info"><div class="link-title">@polaris11999</div><div class="link-meta">Instagram</div></div>
+                <div class="link-info">
+                    <div class="link-title">@polaris11999</div>
+                    <div class="link-meta">Instagram</div>
+                </div>
+                <div class="link-arrow">→</div>
+            </a>
+
+            <!-- Contact 追加 -->
+            <a href="mailto:kaito11.0000@gmail.com" class="link-item">
+                <div class="link-thumb">📩</div>
+                <div class="link-info">
+                    <div class="link-title">Contact</div>
+                    <div class="link-meta">Mail</div>
+                </div>
                 <div class="link-arrow">→</div>
             </a>
         </div>
